--- a/documentation/INSTALL.txt
+++ b/documentation/INSTALL.txt
@@ -1,23 +1,20 @@
-
-Storm module for Drupal 6.x
+Project Management module for Drupal
 
 INSTALLATION:
 
 1) Copy this 'storm' directory into the /sites/all/modules directory of your Drupal installation.
 (Multisite installations may wish to use a different directory - see http://drupal.org/node/53705)
 
-2) Enable Storm (and whatever submodules of Storm that you wish), by visiting http://example.com/admin/build/modules. You will (almost) always need 'Storm', 'Storm Attribute' and 'Storm Organization'.
+2) Enable Project Management (and whatever submodules of Project Management that you wish), by visiting http://example.com/admin/build/modules. You will (almost) always need 'Project Management' and 'Project Management Organization'.
 
-3) To enable the pdf invoice feature, you must separately install the tcpdf library (http://www.tcpdf.org). The install directory can be set at /admin/settings/storm/invoice. If you do not install the tcpdf library, Storm will still work, but you will not be able to view pdf versions of invoices.
+3) To enable the pdf invoice feature, you must separately install the tcpdf library (http://www.tcpdf.org). The install directory can be set at /admin/config/pm/invoice. If you do not install the tcpdf library, Project Management will still work, but you will not be able to view pdf versions of invoices.
 
 
 CONFIGURATION:
 
 - Set up permissions: Initially, it is recommended that you allow full access for your administrative role, and allow more once you are familiar with the system.
 
-- There are a number of settings forms linked from http://example.com/admin/settings/storm. After installation, you should visit these pages and 
-
-- Storm Attribute: This module gives additional settings for allowed field values, and values you can search for on the lists. In later versions of Storm, this may become part of the standard settings forms.
+- There are a number of settings forms linked from http://example.com/admin/config/pm. After installation, you should visit these pages and choose settings appropriate for you.
 
 
 DISABLING / UNINSTALL:
@@ -29,19 +26,19 @@ DISABLING / UNINSTALL:
 
 HELP:
 
-- It is understandable that Storm may appear intimidating at first glance due to the number of modules in the package. Do not be afraid!
+- It is understandable that Project Management may appear intimidating at first glance due to the number of modules in the package. Do not be afraid!
 
 - You may find this blog entry useful: http://cocoate.com/2009/06/29/project-management-drupal-and-storm
 
-- For general support, you can ask questions on the issues queue on Drupal.org: http://drupal.org/project/issues/storm
+- For general support, you can ask questions on the issues queue on Drupal.org: http://drupal.org/project/issues/pm
 
 
 FEEDBACK:
 
-- Please feedback on your experiences to make Storm better. This can be done by creating an issue at http://drupal.org/project/issues/storm.
+- Please feedback on your experiences to make Project Management better. This can be done by creating an issue at http://drupal.org/project/issues/pm.
 
-- Were you just trying Storm?
-- Did you end up using Storm?
+- Were you just trying Project Management?
+- Did you end up using Project Management?
 - What did you find difficult?
 - What was the make or break factor for you?
 
