--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,6 +1,8 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
 Version 7.x-1.x-dev:
+- Issue #2037411 by juliangb | gapa: Fixed Remove tasks tab from project node.
+- Issue #1996886 by Raphael Dürst, juliangb | dbt102: Fixed Error viewing Project.
 - Issue #2036773 by Raphael Dürst | gapa: Fixed Error viewing Ticket.
 - Issue #1994568 by juliangb, Raphael Dürst | jandewit6: Fixed Warning on saving ticket.
 
