--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,5 +1,8 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
+Version 7.x-1.x-dev:
+- Issue #1848938 by juliangb | willwh: Fixed View handlers missing.
+
 Version 7.x-1.0-alpha2:
 - Issue #2047761 by juliangb: Improve configuration pages.
 - Issue #2044525 by juliangb | modctek: Port Dashboard block to Drupal 7 version.
