--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,5 +1,8 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
+Version 7.x-1.x-dev:
+- Issue #2102671 by purencool: Add Australia to the attribute currency pmorganization array.
+
 Version 7.x-1.0-alpha3:
 - Issue #2062955 by juliangb | MoneyTalks: Fixed pm organization module has wrong conditional with person.
 - Issue #2059623 by juliangb: Change module names from 'Project Management XYZ" to "PM XYZ".
