--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,6 +1,7 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
 Version 7.x-1.x-dev:
+- Issue #2102861 by juliangb: Implement billing status in Field API.
 - Issue #1804270 by Raphael Dürst, juliangb: Fixed MySQL datatype (FLOAT) for prices is not precise enough.
 - Issue #2102671 by purencool: Add Australia to the attribute currency pmorganization array.
 - Issue #1984336 by juliangb, Raphael Dürst: Cleanup: Resolve Coder Warnings.
