--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,6 +1,7 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
 Version 7.x-1.x-dev:
+- Issue #1929158 by juliangb: Use date fields from the date module.
 - Issue #2047761 by juliangb: Improve configuration pages (cleanup lists section).
 - Issue #2102861 by juliangb: Implement billing status in Field API.
 - Issue #1804270 by Raphael Dürst, juliangb: Fixed MySQL datatype (FLOAT) for prices is not precise enough.
