--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,6 +1,7 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
 Version 7.x-1.x-dev:
+- Issue #1843040 by juliangb: Cleanup: Move hook_node_prepare() into hook_form().
 - Issue #2179365 by juliangb | dbt102: Editing Task Title throws an error.
 - Issue #2140007 by juliangb: Turn off comments on invoices.
 - Issue #2156463 by othermachines: Enable module dependencies during update.
