--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,6 +1,7 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
 Version 7.x-1.x-dev:
+- Issue #2181165 by D34dMan | dbt102: Team permissions not functioning properly.
 - Issue #2140003 by juliangb: Broken handler showing on invoice list view.
 - Issue #2181699 by juliangb | dbt102: Adding new task to existing project does not work right.
 - Issue #2192465 by juliangb | Jeffrey C.: Broken page layout using Corolla theme.
