--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,5 +1,8 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
+Version 7.x-1.x:
+- No changes since last point release.
+
 Version 7.x-1.0-alpha4:
 - Issue #2181165 by D34dMan | dbt102: Team permissions not functioning properly.
 - Issue #2140003 by juliangb: Broken handler showing on invoice list view.
