--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,6 +1,6 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
-Version 7.x-1.x:
+Version 7.x-1.0-alpha5:
 - Issue #2221977 by juliangb: Add pm.make file to help automatically download dependencies.
 - Issue #2110653 by juliangb: PHP Error on adding timetracking before organization.
 - Issue #2026587 by juliangb | Raphael Dürst: Remove invoice auto add functions and links.
