Issue #2235739 by juliangb: Expense list doesn't display properly.

--- a/documentation/CHANGELOG.txt
+++ b/documentation/CHANGELOG.txt
@@ -1,5 +1,8 @@
 ** New issues added should be added at the TOP of the list for each version as they are committed. **
 
+Version 7.x-1.x-dev:
+- Issue #2235739 by juliangb: Expense list doesn't display properly.
+
 Version 7.x-1.0-alpha5:
 - Issue #2221977 by juliangb: Add pm.make file to help automatically download dependencies.
 - Issue #2110653 by juliangb: PHP Error on adding timetracking before organization.
